--- a/Running_Mean.ipynb
+++ b/Running_Mean.ipynb
@@ -50,7 +50,7 @@
     "$$\n",
     "p(t) = \\text{argmin}_{p \\in S^2} \\mathbb{E} \\left [ \\sum_{i=1}^N w(|t - T_i|) \\, d(p, p_i)^2 \\right ],\n",
     "$$\n",
-    "and see what correction we should apply to the weights. One example is to assume "
+    "and see what correction we should apply to the weights. One example is to assume normal distributions $T_i = N(\\tau_i, \\sigma_i)$."
    ]
   },
   {
