--- a/dispersion_vs_concentration_vs_latitude.ipynb
+++ b/dispersion_vs_concentration_vs_latitude.ipynb
@@ -5,9 +5,7 @@
    "id": "63023702-8557-46b2-9cf7-cc1d609e10e6",
    "metadata": {},
    "source": [
-    "# Finding an empirical relation between th concentration parameter and the latitude\n",
-    "\n",
-    "From: https://github.com/venkatesannaveen/python-science-tutorial/blob/master/curve-fitting/curve-fitting-tutorial.ipynb"
+    "# Finding an empirical relation between th concentration parameter and the latitude"
    ]
   },
   {
