--- a/dispersion_vs_concentration_vs_latitude.ipynb
+++ b/dispersion_vs_concentration_vs_latitude.ipynb
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "c360d9b1-1f94-4823-9de3-a532d39eca83",
    "metadata": {},
    "outputs": [],
@@ -461,8 +461,10 @@
     "def kappa_from_latitude(latitude_radians, a = 11.23, b=0.27):\n",
     "    \n",
     "    '''\n",
-    "    We use a power-law fitting to fit an empirical relation between kappa and angular dispersion found to be $ S = 72.33 \\kappa^-0.50 $\n",
-    "    then we use model G to find the kappa that best fits the angular relation between \n",
+    "    Input: given a latitude (in radians), and the $a$ and $b$ parameters that best describes the Model G that we want to simulate, \n",
+    "    it returns the theoretical concentration parameter (kappa) that a sample of VGPs would have at any given latitude.\n",
+    "    Notes: \n",
+    "    First, we use a power-law fit to find an empirical relation between kappa and angular dispersion (found to be $ S = 72.33 \\kappa^-0.50 $)\n",
     "    '''    \n",
     "    latitude = np.degrees(np.abs(latitude_radians))\n",
     "    \n",
