--- a/dispersion_vs_concentration_vs_latitude.ipynb
+++ b/dispersion_vs_concentration_vs_latitude.ipynb
@@ -453,20 +453,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "c360d9b1-1f94-4823-9de3-a532d39eca83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def kappa_from_latitude(latitude_radians, a = 11.23, b=0.27):\n",
+    "def kappa_from_latitude(latitude, a = 11.23, b=0.27, degrees = False):\n",
     "    \n",
     "    '''\n",
     "    Input: given a latitude (in radians), and the $a$ and $b$ parameters that best describes the Model G that we want to simulate, \n",
     "    it returns the theoretical concentration parameter (kappa) that a sample of VGPs would have at any given latitude.\n",
     "    Notes: \n",
-    "    First, we use a power-law fit to find an empirical relation between kappa and angular dispersion (found to be $ S = 72.33 \\kappa^-0.50 $)\n",
+    "     - we use a power-law fit to find an empirical relation between kappa and angular dispersion (found to be $ S = 72.33 \\kappa^-0.50 $)\n",
+    "     - The default $a$ and $b$ values are from Doubrovine et al., (2019) (for the last 10 Ma - PSV10)\n",
     "    '''    \n",
-    "    latitude = np.degrees(np.abs(latitude_radians))\n",
+    "    if degrees == False: latitude = np.degrees(np.abs(latitude_radians))\n",
     "    \n",
     "    S = np.sqrt(a**2+(latitude*b)**2) # approximate model G from Doubrovine et al. 2019     \n",
     "    \n",
@@ -475,23 +476,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "fe40cea6-83aa-435e-ba60-8f5e196aa9fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "21.58383373953327"
+       "13.979731322609226"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kappa_from_latitude(np.radians(0))"
+    "kappa_from_latitude(90, degrees = True)"
    ]
   },
   {
